--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.1.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.bezkoder</groupId>
-	<artifactId>spring-boot-login-example</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-boot-login-example</name>
-	<description>Spring Boot Login example with Spring Security, JWT and MySQL - Rest API</description>
+	<groupId>shop.dziupla</groupId>
+	<artifactId>dziupla-back</artifactId>
+	<version>0.0.3-SNAPSHOT</version>
+	<name>dziupla-back</name>
+	<description>The backend for Dziupla Rental</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
