--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/dziupla?useSSL=false
+spring.datasource.url= jdbc:mysql://db:3306/dziupla?useSSL=false
 spring.datasource.username= dziupla
 spring.datasource.password= dziupla
 
